--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,14 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --bg-primary: #F1F5F9;
-  --bg-secondary: #007aff;
-  --bg-box: #FFFFFF;
-  --font-primary: #dee4ee;
-  --font-secondary: #1c2434;
+  --bg-light: #F1F5F9;
+  --bg-dark: #1C2434;
+  --bg-blue: #007aff;
+  --bg-white: #FFFFFF;
+  --bg-terciary-hover: #64748b;
+  --font-light: #dee4ee;
+  --font-dark: #1c2434;
+  --font-white: #FFFFFF;
   --border-primary: #e2e8f0;
 }
 
 body {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-light);
+  color: var(--font-dark);
 }
