--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,8 @@
   --bg-dark: #1C2434;
   --bg-blue: #007aff;
   --bg-white: #FFFFFF;
-  --bg-terciary-hover: #64748b;
+  --hover-light: #64748b;
+  --hover-dark: #6466692c;
   --font-light: #dee4ee;
   --font-dark: #1c2434;
   --font-white: #FFFFFF;
